Build out new dummy app

--- a/test/dummy/public/404.html
+++ b/test/dummy/public/404.html
@@ -7,7 +7,7 @@
     <title>The page you were looking for doesn’t exist (404 Not found)</title>
 
     <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1, width=device-width">
+    <meta name="preview" content="initial-scale=1, width=device-width">
     <meta name="robots" content="noindex, nofollow">
 
     <style>
