--- a/test/dummy/public/406-unsupported-browser.html
+++ b/test/dummy/public/406-unsupported-browser.html
@@ -7,7 +7,7 @@
     <title>Your browser is not supported (406 Not Acceptable)</title>
 
     <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1, width=device-width">
+    <meta name="preview" content="initial-scale=1, width=device-width">
     <meta name="robots" content="noindex, nofollow">
 
     <style>
