--- a/test/dummy/public/422.html
+++ b/test/dummy/public/422.html
@@ -7,7 +7,7 @@
     <title>The change you wanted was rejected (422 Unprocessable Entity)</title>
 
     <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1, width=device-width">
+    <meta name="preview" content="initial-scale=1, width=device-width">
     <meta name="robots" content="noindex, nofollow">
 
     <style>
