--- a/test/dummy/public/400.html
+++ b/test/dummy/public/400.html
@@ -7,7 +7,7 @@
     <title>The server cannot process the request due to a client error (400 Bad Request)</title>
 
     <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1, width=device-width">
+    <meta name="preview" content="initial-scale=1, width=device-width">
     <meta name="robots" content="noindex, nofollow">
 
     <style>
