--- a/test/dummy/public/500.html
+++ b/test/dummy/public/500.html
@@ -7,7 +7,7 @@
     <title>We’re sorry, but something went wrong (500 Internal Server Error)</title>
 
     <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1, width=device-width">
+    <meta name="preview" content="initial-scale=1, width=device-width">
     <meta name="robots" content="noindex, nofollow">
 
     <style>
